# multiHGtest_package

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/multiHGtest/: multiHGtest.py
tests/: example_usage.py  test_dashboard.py  test_fixes.py  test_pvalues_under_null.py  test_time_to_event_conversion.py
