[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "multiHGtest"
version = "0.0.6"
description = "Testing for differences in survival using multiple hypergeometric P-values and higher criticism"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Alon Kipnis", email = "alonkipnis@gmail.com"}
]
keywords = [
    "survival analysis",
    "hypergeometric test",
    "higher criticism",
    "non-proportional hazards",
    "multiple testing",
    "Fisher combination test",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "multiple-hypothesis-testing",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "lifelines>=0.27",
]

[project.urls]
Homepage = "https://github.com/alonkipnis/multiHGtest_package"
Repository = "https://github.com/alonkipnis/multiHGtest_package"
"Bug Tracker" = "https://github.com/alonkipnis/multiHGtest_package/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]